k8s/deploymentSingle.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservices-lab
    component: apigwws
  name: apigwws
spec:
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 8080
      # Port to forward to inside the pod
      targetPort: 80
      # Port accessible outside cluster
      nodePort: 30006
  selector:
    app: microservices-lab
    component: apigwws
  type: LoadBalancer
