k8s/deploymentsAudit.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservices-lab
    component: auditlogapi
  name: auditlogapi
spec:
  ports:
      port: 80
  selector:
    app: microservices-lab
    component: auditlogapi

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auditlogapi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: microservices-lab
        component: auditlogapi
    spec:
      containers:
        - name: auditlogapi
          image: fnikolovski/auditlogapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
