k8s/deploymentsAuditService.yml
---
kind: Service
apiVersion: v1
metadata:
  name: auditlogapiservice
spec:
  selector:
    app: auditlogapi
  ports:
    #- protocol: "TCP"
      # Port accessible inside cluster
      port: 8080
      # Port to forward to inside the pod
      #targetPort: 8080
      # Port accessible outside cluster
      #nodePort: 30002
  #type: LoadBalancer
