k8s/services-hello-word-working.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservices-lab
    component: hello-world
  name: hello-world
spec:
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 8080
      # Port to forward to inside the pod
      targetPort: 80
      # Port accessible outside cluster
      nodePort: 31000
  selector:
    app: microservices-lab
    component: hello-world
  type: LoadBalancer
