k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: microservices-lab
    component: frontend
  name: microservices-lab-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"  
spec:
  rules:
  - http:
      paths:
      - path: /authorization
        backend:
          serviceName: authorizationapi
          servicePort: 80
      - path: /AuditLog
        backend:
          serviceName: auditlogapi
          servicePort: 30002
